<resources>
    <string name="app_name">MoMo BookLet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="TransactionPanel">Transaction Page</string>
    <string name="CustomerName">Enter Customer Name</string>
    <string name="CustomerNumber">Enter Customer Number</string>
    <string name="CustomerID">Enter Customer ID</string>
    <string name="Store">StoreData</string>
    <string name="Amount">Enter Amount</string>
    <string name="TransactionZone">"Continue"</string>
    <string name="Switch">"Buys Momo"</string>
    <string name="title_activity_signature_pad">SignaturePad</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name ="TakeSginature"> Capture  </string>
    <string name ="Clear">Clear</string>
    <string name = "Commit_To_db">WRITE TO RECORD SHEET</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>>
</resources>