<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TransactionType"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="750dp"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="500dp"
            android:layout_height="729dp"

            android:gravity="center"


            android:orientation="vertical"
            android:scrollbarAlwaysDrawHorizontalTrack="false"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <EditText
                android:id="@+id/customerPhone"
                android:layout_width="238dp"
                android:layout_height="117dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/CustomerNumber"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textColorHint="@color/yellow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="246dp"
                android:layout_height="78dp"
                android:layout_marginTop="0dp"
                android:ems="10"
                android:hint="@string/CustomerName"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="@color/yellow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.436"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/customerPhone" />

            <EditText
                android:id="@+id/customerID"

                android:layout_width="237dp"
                android:layout_height="91dp"
                android:ems="10"
                android:hint="@string/CustomerID"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColorHint="@color/yellow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.431"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

            <EditText
                android:id="@+id/customerAmount"
                android:layout_width="253dp"
                android:layout_height="90dp"
                android:layout_marginTop="0dp"
                android:ems="10"
                android:hint="@string/Amount"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColorHint="@color/yellow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.419"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/customerID" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch1"
                android:layout_width="178dp"
                android:layout_height="48dp"
                android:layout_marginTop="44dp"
                android:clickable="true"
                android:onClick="try1"
                android:text="@string/Switch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.429"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/customerAmount" />


            <Button
                android:id="@+id/StoreButton"
                android:layout_width="145dp"
                android:layout_height="50dp"
                android:layout_marginStart="44dp"
                android:layout_marginTop="32dp"
                android:onClick="store_action"
                android:text="@string/Store"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switch1" />

            <Button
                android:id="@+id/button2"
                android:layout_width="148dp"
                android:layout_height="54dp"
                android:layout_marginStart="44dp"
                android:layout_marginTop="32dp"
                android:text="@string/TransactionZone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.571"
                app:layout_constraintStart_toEndOf="@+id/StoreButton"
                app:layout_constraintTop_toBottomOf="@+id/switch1" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
